--- a/lib/azure/package.json
+++ b/lib/azure/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@azure/functions": "^4.0.0-alpha.7",
+    "@azure/storage-blob": "^12.13.0",
+    "axios": "^1.3.4",
     "openai": "^3.2.1"
   },
   "devDependencies": {
